contour/aws/working/example-contour.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-contour
  namespace: nginx-sample-traffic
spec:
  ingressClassName: contour
  rules:
  - host: a06589614a2b743688ef6b8cdbfc6912-751344421.us-west-2.elb.amazonaws.com
    http:
      paths:
      - backend:
          service:
            name: apple-service
            port:
              number: 5678
        path: /apple
        pathType: Prefix
      - backend:
          service:
            name: banana-service
            port:
              number: 5678
        path: /banana
        pathType: Prefix
